by a prefixed token enclosed in { }. Presently supported are:

    {crypt}...          crypt(3) hash
    {crypt_md5}...      crypt_md5 hash
    {plaintext}...      plaintext password
    {md5} or no prefix  old-style simple MD5 password

This facility replaces the old apop_password field in the database; instead,
APOP users should arrange for their passwords to be recorded in the plaintext
format as above.

The new vmail-sql will work in the same way, when it is released.

1.3.1

Minor changes, and the addition of auth_perl for implementing authenticators
as fragments of perl code.

1.3.0

Incorporated autoconf support from Mark Longair, maildir support from Paul
Makepeace, a new authenticator (auth_other) which talks to external programs
and a perl library to support it, a more general scheme for selecting
mailspools and minor portability fixes.

1.2.4

Fixes for a few minor bugs, and more intelligent signal handling. tpop3d now
shuts down in a cleaner fashion on SIGTERM, and re-execs itself on receipt of
SIGHUP. In addition, a new debugging option (-DAWFUL_BACKTRACE_HACK) is
available on Linux; a few people have reported unexplained trouble and this
will allow more useful data to be collected in the event of a failure.

1.2.3

Made logging clearer; fixed a potential problem with lock files for
non-existent (empty) mail spools, and another which might lead to zombie
processes being generated under very high load. In addition, tpop3d now
checks the configuration file for the presence of unknown directives, and uses
getopt(3) for option processing, making it more like other Unix programs.

1.2.2

Minor changes; addition of a -DNO_SNIDE_COMMENTS compile-time option to please
Mark, whose user community complained about "You can hang around all day if
you like, I have better things to do".

1.2.1

Various fixes; added a patch for crypt(3) passwords in auth_mysql, and added
an option to suppress c-client metadata. CHANGES file created.