@@ -5,7 +5,7 @@
 #listen-address: 127.0.0.1:pop-3 pop3.example.com 
 listen-address: 0.0.0.0 0.0.0.0:9000
 
-max-children:           10
+max-children:           40
 
 mailbox:                maildir:$(home)/Maildir /var/spool/mail/$(user)
 
@@ -14,7 +14,7 @@ mailbox:                maildir:$(home)/Maildir /var/spool/mail/$(user)
 auth-pam-enable:        yes
 auth-pam-facility:      tpop3d
 auth-pam-mail-group:    mail
-#auth-pam-mailbox:       $(home)/mail/INBOX
+auth-pam-mailbox:       $(home)/mail/INBOX
 
 #auth-perl-enable:       yes
 #auth-perl-start:        do "/home/chris/software/tpop3d/tpop3d.pl";
@@ -27,7 +27,7 @@ auth-pam-mail-group:    mail
 #auth-other-group:       0
 #auth-other-user:        0
 
-#auth-mysql-enable:      yes
-#auth-mysql-database:    vmail
-#auth-mysql-username:    vmail
-#auth-mysql-password:    secret
+auth-mysql-enable:      yes
+auth-mysql-database:    vmail
+auth-mysql-username:    vmail
+auth-mysql-password:    moocow
